--- a/css/style.css
+++ b/css/style.css
@@ -4,64 +4,58 @@
     box-sizing: border-box;
     font-size: 32px;
 }
-@media (min-width: 1000px) {
-    header {
-        padding: 0;
-    }
-    .logo {
-        padding: 0;
-    }
-    .left-panel {
-        padding: 0;
-    }
-}
-header {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 10%;
-}
-.logo {
+#wrapper {
     display: flex;
-    justify-content: space-evenly;
-    height: 100%;
+    flex-direction: column;
+    width: calc(100% - 10px);
+    height: fit-content;
+    margin: 5px;
+}
+#header {
+    order: 0;
+    width: 90%;
+    height: 75px;
+    background-color: black;
+    border-radius: 0px 37px 37px 0px;
+}
+#left-panel {
+    height: 0;
+    width: 15%;
+    background-color: #111111;
+    order: 1;
+    padding-bottom: 40%;
+    border-radius: 0 0 135px 135px;
+}
+#logo {
+    position: absolute;
+    justify-content: space-around;
+    display: flex;
+    left: calc(0% + 5px);
+    top: 42px;
     width: 20%;
-    background-color: #ff5722;
-    border-left: 2px solid #666666;
-    border-top: 2px solid #666666;
+    height: 150px;
+    background-color: orangered;
+    border-radius: 0px 75px 75px 0px;
 }
-.header-content {
+#logo img {
+    padding-top: 5%;
+    width: 300px;
+    height: 130px;
+}
+#container {
     position: absolute;
-    top: 0;
-    right: 0;
-    height: calc(100% + 1px);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    top: 10%;
+    right: 0%;
     width: 80%;
-    background-color: #ff8a50;
-    border: 2px solid #666666;
 }
-.left-panel {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 90%;
-    width: calc(20% + 1px);
-    background-color: #ff8a50;
-    border: 2px solid #666666;
-}
-.container {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    height: 90%;
-    width: 80%;
-    background-color: #ffedae;
-}
-.card {
-    height: 50%;
-    width: 25%;
-    border: 1px solid black;
-}
-img {
-    height: 90px;
-    width: 185px;
+@media (max-width: 1280px) {
+    #logo img {
+        margin-top: 5%;
+        padding-top: 5%;
+        width: 230px;
+        height: 100px;
+    }
 }
