--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,27 @@
     right: 0%;
     width: 80%;
 }
+.card {
+    position: relative;
+    margin: 5px 15px;
+    width: 350px;
+    height: 420px;
+    border: 2px solid black;
+    border-radius: 25px;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
+.card h1 {
+    text-align: center;
+    color: white;
+    background-color: black;
+    border-radius: 22px 22px 0 0;
+}
+.card img:first-of-type {
+    width: 144px;
+    height: 144px;
+}
 @media (max-width: 1280px) {
     #logo img {
         margin-top: 5%;
