--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,6 @@
 body {
     background-color: #333333;
 }
-#wrapper {
-    width: calc(100% - 10px);
-    margin: 5px;
-}
 #header {
     position: relative;
     width: 90%;
@@ -20,27 +16,114 @@ body {
     border-radius: 0px 37px 37px 0px;
 }
 #left-panel {
-    position: relative;
-    display: flex;
-    justify-content: space-evenly;
-    height: 50%;
+    height: 700px;
     width: 15%;
     background-color: #111111;
     border-radius: 0 0 135px 135px;
 }
-#paging-nav {
-    position: absolute;
-    top: 50%;
+#full-list {
+    position: relative;
+    top: 20%;
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
-#paging-nav > button {
-    height: 40px;
-    width: 120px;
+.nav-bar{
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
+.btn{
+    background: none;
+    border: 2px solid #000;
+    text-transform: uppercase;
+    font-size: 0.5em;
+    padding: 12px 20px;
+    min-width: 200px;
+    margin: 10px;
+    cursor: pointer;
+    transition: color 0.4s linear;
+    position: relative;
+}
+.btn:hover{
+    color: #fff;
+}
+.btn::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    z-index: -1;
+    transition: transform 0.5s;
+    transform-origin: 0 0;
+    transition-timing-function: cubic-bezier(0.5,1.6,0.4,0.7);
+}
+.btn1::before{
+    transform: scaleX(0);
+}
+.btn1:hover::before{
+    transform: scaleX(1);
+}
+#full-list p {
+    background-color: white;
+    width: fit-content;
+    font-size: 0.75em;
+    height: 50px;
+    border-radius: 25px;
+    font-size: 0.65em;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+#full-list p input {
+    border: none;
+    outline: none;
+    background: none;
+    line-height: 0.75em;
+    width: 20px;
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#paging-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    display: block;
+}
+#paging-nav button {
+    display: flex;
+    font-size: 1.1em;
+    padding: 10px;
+    color: white;
+    border: none;
+    outline: none;
+    background-image: linear-gradient(white, white), linear-gradient(#111111, #111111);
+    background-size: 0 5px, auto;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    transition: all .2s ease-out;
+}
+#paging-nav button:hover {
+    background-size: 100% 5px, auto;
+    cursor: pointer;
 }
 #logo {
     position: absolute;
     justify-content: space-around;
     display: flex;
-    left: calc(0% + 5px);
+    left: 0%;
     top: 42px;
     width: 20%;
     height: 150px;
@@ -61,7 +144,6 @@ body {
     right: 0%;
     width: 80%;
     height: 90%;
-    transition: 1s;
 }
 .card {
     position: relative;
@@ -241,17 +323,20 @@ body {
     height: 50px;
     border-radius: 25px;
     padding: 10px;
+    display: flex;
+    align-items: center;
 }
-.search-box:hover > .search-btn {
+.search-box:hover > .search-btn, #full-list p:hover > .move-btn {
     background: orangered;
     color: black;
 }
    
-.search-btn {
+.search-btn, .move-btn {
     width: 45px;
     height: 45px;
-    margin-top: -7px;
-    font-size: 0.5em;
+    margin-right: -5px;
+    float: right;
+    font-size: 0.7em;
     border-radius: 50%;
     background: #111111;
     display: flex;
@@ -261,11 +346,6 @@ body {
     color: white;
     cursor: pointer;
 }
-   
-.search-btn > i {
-    font-size: 30px;
-}
-   
 .search-txt {
     border: none;
     background: none;
