--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,15 @@
     font-family: 'Lato', 'sans-serif';
 }
 body {
-    background-color: #333333;
+    background: rgba(30,30,30,1);
+    background: -moz-linear-gradient(top, rgba(30,30,30,1) 0%, rgba(70,70,70,1) 57%, rgba(120,120,120,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(30,30,30,1)), color-stop(57%, rgba(70,70,70,1)), color-stop(100%, rgba(120,120,120,1)));
+    background: -webkit-linear-gradient(top, rgba(30,30,30,1) 0%, rgba(70,70,70,1) 57%, rgba(120,120,120,1) 100%);
+    background: -o-linear-gradient(top, rgba(30,30,30,1) 0%, rgba(70,70,70,1) 57%, rgba(120,120,120,1) 100%);
+    background: -ms-linear-gradient(top, rgba(30,30,30,1) 0%, rgba(70,70,70,1) 57%, rgba(120,120,120,1) 100%);
+    background: linear-gradient(to bottom, rgba(30,30,30,1) 0%, rgba(70,70,70,1) 57%, rgba(120,120,120,1) 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 #header {
     position: relative;
@@ -21,7 +29,7 @@ body {
     background-color: #111111;
     border-radius: 0 0 135px 135px;
 }
-#full-list {
+#full-list, #generator {
     position: relative;
     top: 20%;
     width: 100%;
@@ -30,18 +38,19 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-
 }
 .nav-bar{
-    position: absolute;
-    top: 5%;
-    left: 50%;
+    position: relative;
+    top: 0%;
+    left: 40%;
     transform: translate(-50%,-50%);
     text-align: center;
 }
 .btn{
     background: none;
-    border: 2px solid #000;
+    border: 2px solid #fff;
+    color: #fff;
+    border-radius: 25px;
     text-transform: uppercase;
     font-size: 0.5em;
     padding: 12px 20px;
@@ -52,7 +61,7 @@ body {
     position: relative;
 }
 .btn:hover{
-    color: #fff;
+    color: #000;
 }
 .btn::before{
     content: "";
@@ -61,11 +70,10 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background: #000;
+    background: #fff;
+    border-radius: 25px;
     z-index: -1;
     transition: transform 0.5s;
-    transform-origin: 0 0;
-    transition-timing-function: cubic-bezier(0.5,1.6,0.4,0.7);
 }
 .btn1::before{
     transform: scaleX(0);
@@ -95,17 +103,9 @@ body {
     justify-content: space-evenly;
     align-items: center;
 }
-#paging-nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    display: block;
-}
-#paging-nav button {
-    display: flex;
-    font-size: 1.1em;
-    padding: 10px;
+#paging-nav button, #random {
+    padding: 5px;
+    margin: 15px;
     color: white;
     border: none;
     outline: none;
@@ -115,7 +115,12 @@ body {
     background-position: center bottom;
     transition: all .2s ease-out;
 }
-#paging-nav button:hover {
+#paging-nav button svg {
+    padding: 5px;
+    font-size: 0.75em;
+    box-sizing: content-box;
+}
+#paging-nav button:hover, #random:hover {
     background-size: 100% 5px, auto;
     cursor: pointer;
 }
@@ -127,7 +132,7 @@ body {
     top: 42px;
     width: 20%;
     height: 150px;
-    background-color: orangered;
+    background-color: #f57327;
     border-radius: 0px 75px 75px 0px;
 }
 #logo img {
@@ -327,7 +332,7 @@ body {
     align-items: center;
 }
 .search-box:hover > .search-btn, #full-list p:hover > .move-btn {
-    background: orangered;
+    background: #f57327;
     color: black;
 }
    
