--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ body {
     transition: all .2s ease-out;
 }
 #paging-nav button svg {
-    padding: 5px;
+    padding: 0px 5px 3px 5px;
     font-size: 0.75em;
     box-sizing: content-box;
 }
@@ -201,6 +201,32 @@ body {
     right: 0%;
     width: 80%;
     height: 90%;
+}
+.info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #ddd;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: rgba(0,0,0,0.15);
+    padding: 50px 20px;
+}
+.info h1 {
+    font-size: 1.2em;
+    font-weight: bold;
+    border-bottom: 2px solid white;
+}
+.info h3 {
+    text-align: center;
+    width: 580px;
+    padding: 50px 0px;
+    font-size: 0.75em;
 }
 .card {
     position: relative;
