--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,14 @@ body {
     justify-content: space-evenly;
     align-items: center;
 }
+#info {
+    font-size: 0.4em;
+    color: white;
+    width: 50%;
+    border-bottom: 1px solid white;
+    display: block;
+    text-align: center;
+}
 #paging-nav button, #random {
     padding: 5px;
     margin: 15px;
