--- a/css/style.css
+++ b/css/style.css
@@ -18,15 +18,23 @@ body {
 }
 #header {
     position: relative;
-    width: 90%;
+    width: 85%;
     height: 3.75vw;
     background-color: black;
     border-radius: 0px 37px 37px 0px;
 }
+.search-error {
+    display: none;
+    color: red;
+    font-size: 0.65em;
+    position: absolute;
+    top: 35%;
+    left: 51%;
+}
 .about-box {
     position: absolute;
     top: 50%;
-    left: 70%;
+    left: 80%;
     transform: translate(-50%, -50%);
     background: none;
     border-radius: 40px;
@@ -132,8 +140,6 @@ body {
 }
 .info-box {
     background-color: white;
-    width: fit-content;
-    font-size: 0.75em;
     height: 2.5vw;
     border-radius: 25px;
     font-size: 0.65em;
@@ -142,15 +148,18 @@ body {
     align-items: center;
 }
 .info-box input {
+    font-size: 1em;
     border: none;
     outline: none;
     background: none;
-    line-height: 0.75em;
-    width: 20px;
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    width: 6.5vw;
+}
+.error-msg {
+    display: none;
+    color: red;
+    font-size: 0.5em;
+    position: absolute;
+    bottom: 20%;
 }
 #info {
     font-size: 0.4em;
@@ -418,7 +427,7 @@ body {
     display: flex;
     align-items: center;
 }
-.search-box:hover > .search-btn, #full-list p:hover > .move-btn {
+.search-box:hover > .search-btn, #full-list div:hover > .move-btn {
     background: #f57327;
     color: black;
 }
